@@ -107,6 +107,7 @@ check_symbol_exists (strncasecmp "string.h" HAVE_STRNCASECMP)
 check_symbol_exists (strcasecmp "string.h" HAVE_STRCASECMP)
 check_function_exists (strcasestr HAVE_STRCASESTR)
 check_function_exists (strchrnul HAVE_STRCHRNUL)
+check_function_exists (strtoull HAVE_STRTOULL)
 check_include_file (dirent.h HAVE_DIRENT_H)
 check_include_file (sys/ioctl.h HAVE_SYS_IOCTL_H)
 check_include_file (sys/utsname.h HAVE_SYS_UTSNAME_H)
