@@ -27,6 +27,7 @@ ChangeLog
 [-] * Compile on platforms where ssize_t does not exist.
 [-] * Fix detection of towlower on some compilers.
 [-] * Make Bluetooth compile using BCC.
+[-] * Fix compilation if strtoull does not exist.
 
 20081119 - 1.21.92
 
